core/trunk/src/debugger/tod/tools/parsers/WorkingSetParser.java
/*
TOD - Trace Oriented Debugger.
Copyright (C) 2006 Guillaume Pothier (gpothier@dcc.uchile.cl)

This program is free software; you can redistribute it and/or
modify it under the terms of the GNU General Public License
version 2 as published by the Free Software Foundation.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.

Parts of this work rely on the MD5 algorithm "derived from the 
RSA Data Security, Inc. MD5 Message-Digest Algorithm".
*/
package tod.tools.parsers;

import java.util.ArrayList;
import java.util.List;

import tod.tools.parsers.workingset.AbstractClassSet;
import tod.tools.parsers.workingset.CompoundClassSet;
import tod.tools.parsers.workingset.SetOperation;
import tod.tools.parsers.workingset.WorkingSetFactory;

public class WorkingSetParser implements WorkingSetParserConstants
{

    static final public String className() throws ParseException
    {
        Token t;
        t = jj_consume_token(CLASSNAME);
        {
            if (true) return t.image;
        }
        throw new Error("Missing return statement in function");
    }

    static final public AbstractClassSet simpleClassSet() throws ParseException
    {
        String name;
        name = className();
        {
            if (true) return WorkingSetFactory.createClassSet(name);
        }
        throw new Error("Missing return statement in function");
    }

    static final public AbstractClassSet compoundClassSet() throws ParseException
    {
        SetOperation operation;
        List operations = new ArrayList();
        jj_consume_token(LBRACKET);
        label_1: while (true)
        {
            operation = setOperation();
            operations.add(operation);
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case PLUS:
                case MINUS:
                    ;
                    break;
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
        }
        jj_consume_token(RBRACKET);
        {
            if (true) return new CompoundClassSet(operations);
        }
        throw new Error("Missing return statement in function");
    }

    static final public AbstractClassSet classSet() throws ParseException
    {
        AbstractClassSet s;
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case CLASSNAME:
                s = simpleClassSet();
                break;
            case LBRACKET:
                s = compoundClassSet();
                break;
            default:
                jj_la1[1] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        {
            if (true) return s;
        }
        throw new Error("Missing return statement in function");
    }

    static final public SetOperation setOperation() throws ParseException
    {
        Token op;
        AbstractClassSet set;
        List sets = new ArrayList();
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
        {
            case PLUS:
                op = jj_consume_token(PLUS);
                break;
            case MINUS:
                op = jj_consume_token(MINUS);
                break;
            default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
        set = classSet();
        sets.add(set);
        label_2: while (true)
        {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk)
            {
                case COLON:
                    ;
                    break;
                default:
                    jj_la1[3] = jj_gen;
                    break label_2;
            }
            jj_consume_token(COLON);
            set = classSet();
            sets.add(set);
        }
        {
            if (true) return new SetOperation(op.image, sets);
        }
        throw new Error("Missing return statement in function");
    }

    static private boolean jj_initialized_once = false;

    static public WorkingSetParserTokenManager token_source;

    static SimpleCharStream jj_input_stream;

    static public Token token, jj_nt;

    static private int jj_ntk;

    static private int jj_gen;

    static final private int[] jj_la1 = new int[4];

    static private int[] jj_la1_0;
    static
    {
        jj_la1_0();
    }

    private static void jj_la1_0()
    {
        jj_la1_0 = new int[]
            { 0x6, 0x108, 0x6, 0x80, };
    }

    public WorkingSetParser(java.io.InputStream stream)
    {
        if (jj_initialized_once)
        {
            System.out.println("ERROR: Second call to constructor of static parser.  You must");
            System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new WorkingSetParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    static public void ReInit(java.io.InputStream stream)
    {
        jj_input_stream.ReInit(stream, 1, 1);
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    public WorkingSetParser(java.io.Reader stream)
    {
        if (jj_initialized_once)
        {
            System.out.println("ERROR: Second call to constructor of static parser.  You must");
            System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        jj_input_stream = new SimpleCharStream(stream, 1, 1);
        token_source = new WorkingSetParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    static public void ReInit(java.io.Reader stream)
    {
        jj_input_stream.ReInit(stream, 1, 1);
        token_source.ReInit(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    public WorkingSetParser(WorkingSetParserTokenManager tm)
    {
        if (jj_initialized_once)
        {
            System.out.println("ERROR: Second call to constructor of static parser.  You must");
            System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
            System.out.println("       during parser generation.");
            throw new Error();
        }
        jj_initialized_once = true;
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    public void ReInit(WorkingSetParserTokenManager tm)
    {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 4; i++)
            jj_la1[i] = -1;
    }

    static final private Token jj_consume_token(int kind) throws ParseException
    {
        Token oldToken;
        if ((oldToken = token).next != null) token = token.next;
        else token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        if (token.kind == kind)
        {
            jj_gen++;
            return token;
        }
        token = oldToken;
        jj_kind = kind;
        throw generateParseException();
    }

    static final public Token getNextToken()
    {
        if (token.next != null) token = token.next;
        else token = token.next = token_source.getNextToken();
        jj_ntk = -1;
        jj_gen++;
        return token;
    }

    static final public Token getToken(int index)
    {
        Token t = token;
        for (int i = 0; i < index; i++)
        {
            if (t.next != null) t = t.next;
            else t = t.next = token_source.getNextToken();
        }
        return t;
    }

    static final private int jj_ntk()
    {
        if ((jj_nt = token.next) == null) return (jj_ntk = (token.next = token_source.getNextToken()).kind);
        else return (jj_ntk = jj_nt.kind);
    }

    static private java.util.Vector jj_expentries = new java.util.Vector();

    static private int[] jj_expentry;

    static private int jj_kind = -1;

    static public ParseException generateParseException()
    {
        jj_expentries.removeAllElements();
        boolean[] la1tokens = new boolean[15];
        for (int i = 0; i < 15; i++)
        {
            la1tokens[i] = false;
        }
        if (jj_kind >= 0)
        {
            la1tokens[jj_kind] = true;
            jj_kind = -1;
        }
        for (int i = 0; i < 4; i++)
        {
            if (jj_la1[i] == jj_gen)
            {
                for (int j = 0; j < 32; j++)
                {
                    if ((jj_la1_0[i] & (1 << j)) != 0)
                    {
                        la1tokens[j] = true;
                    }
                }
            }
        }
        for (int i = 0; i < 15; i++)
        {
            if (la1tokens[i])
            {
                jj_expentry = new int[1];
                jj_expentry[0] = i;
                jj_expentries.addElement(jj_expentry);
            }
        }
        int[][] exptokseq = new int[jj_expentries.size()][];
        for (int i = 0; i < jj_expentries.size(); i++)
        {
            exptokseq[i] = (int[]) jj_expentries.elementAt(i);
        }
        return new ParseException(token, exptokseq, tokenImage);
    }

    static final public void enable_tracing()
    {
    }

    static final public void disable_tracing()
    {
    }

}
